--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -359,10 +359,6 @@
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d Vložené obrázky</string>
     <string name="warning">Upozornění</string>
-    <string name="card_details_title">%1$s (*** %2$s)</string>
-    <string name="card_details_subtitle">Vypršení platnosti %s</string>
-    <string name="no_payment_methods">Nemáte žádné uložené způsoby platby.</string>
-    <string name="edit_payment_methods">Pro úpravu fakturačních údajů se prosím přihlašte pomocí protonmail.com.</string>
     <string name="available_addresses">Dostupné adresy</string>
     <string name="inactive_addresses">Neaktivní adresy</string>
     <string name="not_set">Nenastaveno</string>
@@ -656,9 +652,7 @@
     <string name="account_settings">Nastavení účtu</string>
     <!-- region Acc Settings -->
     <string name="account">Účet</string>
-    <string name="subscription">Předplatné</string>
-    <string name="plan_and_user">Tarif</string>
-    <string name="payment_method">Způsob platby</string>
+    <string name="drawer_subscription">Předplatné</string>
     <string name="password_manager">Správa hesel</string>
     <string name="password_changed">Heslo bylo změněno.</string>
     <string name="recovery_email">Sekundární e-mail</string>
@@ -861,7 +855,6 @@
     <string name="inbox_could_not_retrieve_messages">Nepodařilo se načíst Vaše zprávy</string>
     <string name="inbox_pull_down_to_retry">Pro nový pokus potáhněte dolů</string>
     <string name="edit_draft">Upravit koncept</string>
-    <string name="primary_user_error">Nebylo možné navýšit předplatné, něco se pokazilo.</string>
     <string name="details_show_history">Zobrazit historii</string>
     <string name="could_not_complete_action">Nebylo možné dokončit akci</string>
     <string name="decryption_of_message_failed">Chyba dešifrování: dešifrování zašifrovaného obsahu této zprávy se nezdařilo.</string>
