--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -347,10 +347,6 @@ ke:&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;Apakah Anda 
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d Gambar yang Tersemat</string>
     <string name="warning">Peringatan</string>
-    <string name="card_details_title">%1$s (*** %2$s)</string>
-    <string name="card_details_subtitle">Kedaluwarsa %s</string>
-    <string name="no_payment_methods">Anda tidak memiliki metode pembayaran yang tersimpan.</string>
-    <string name="edit_payment_methods">Silakan masuk melalui protonmail.com untuk mengedit informasi penagihan.</string>
     <string name="available_addresses">Alamat yang tersedia</string>
     <string name="inactive_addresses">Alamat tidak aktif</string>
     <string name="not_set">Belum Ditentukan</string>
@@ -632,9 +628,7 @@ ke:&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;Apakah Anda 
     <string name="account_settings">Pengaturan Akun</string>
     <!-- region Acc Settings -->
     <string name="account">Akun</string>
-    <string name="subscription">Langganan</string>
-    <string name="plan_and_user">Paket</string>
-    <string name="payment_method">Metode Pembayaran</string>
+    <string name="drawer_subscription">Langganan</string>
     <string name="password_manager">Pengelolaan kata sandi</string>
     <string name="password_changed">Kat sandi diubah.</string>
     <string name="recovery_email">Alamat email pemulihan</string>
@@ -825,7 +819,6 @@ ke:&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;Apakah Anda 
     <string name="inbox_could_not_retrieve_messages">Tidak dapat mengambil pesan Anda</string>
     <string name="inbox_pull_down_to_retry">Silakan tarik ke bawah untuk coba ulang</string>
     <string name="edit_draft">Edit draf</string>
-    <string name="primary_user_error">Tidak dapat meningkatkan, ada yang salah.</string>
     <string name="details_show_history">Tampilkan riwayat</string>
     <string name="could_not_complete_action">Tidak dapat menyelesaikan tindakan</string>
     <string name="decryption_of_message_failed">Dekripsi gagal: dekripsi konten di pesan ini gagal.</string>
