--- a/app/src/main/res/values-kab/strings.xml
+++ b/app/src/main/res/values-kab/strings.xml
@@ -349,10 +349,6 @@
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d tugniwin tusliɣin</string>
     <string name="warning">Ɣur-k</string>
-    <string name="card_details_title">%1$s (*** %2$s)</string>
-    <string name="card_details_subtitle">Tanzagt n tagara %s</string>
-    <string name="no_payment_methods">Ur ɣur-k ara tarrayin n lexlaṣ yettwaskelsen.</string>
-    <string name="edit_payment_methods">Qqen s protonmail akken ad tbeddleḍ talɣut n ufeter.</string>
     <string name="available_addresses">Tansiwin yellan</string>
     <string name="inactive_addresses">Tansiwin yensan</string>
     <string name="not_set">Ur yeswil ara</string>
@@ -638,9 +634,7 @@
     <string name="account_settings">Iɣewwaren n umiḍan</string>
     <!-- region Acc Settings -->
     <string name="account">Amiḍan</string>
-    <string name="subscription">Ajerred</string>
-    <string name="plan_and_user">Aɣawas</string>
-    <string name="payment_method">Tarrayt n usellek</string>
+    <string name="drawer_subscription">Ajerred</string>
     <string name="password_manager">Asefrek n wawal uffir</string>
     <string name="password_changed">Awal uffir ibeddem.</string>
     <string name="recovery_email">Imayl n tririt</string>
@@ -835,7 +829,6 @@
     <string name="inbox_could_not_retrieve_messages">Ur izmir ara ad d-yawi iznan-ik</string>
     <string name="inbox_pull_down_to_retry">Ttxil ẓuɣer d akessar akken ad talseḍ aɛraḍ</string>
     <string name="edit_draft">Ẓreg arewway</string>
-    <string name="primary_user_error">Ulamek aleqqem n uswir, tella-d tuccḍa.</string>
     <string name="details_show_history">Sken amazray</string>
     <string name="could_not_complete_action">D awezd awezɣi ad temmed tigawt</string>
     <string name="decryption_of_message_failed">Tuccḍa di tukksa n uwgelhen: tukksa n uwgelhen n yizen-a tecceḍ.</string>
