--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -359,10 +359,6 @@
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">Osadzone obrazy w wiadomości: %d</string>
     <string name="warning">Ostrzeżenie</string>
-    <string name="card_details_title">%1$s (*** %2$s)</string>
-    <string name="card_details_subtitle">Data ważności %s</string>
-    <string name="no_payment_methods">Nie masz zapisanych metod płatności.</string>
-    <string name="edit_payment_methods">Zaloguj się przez protonmail.com, aby edytować informacje dotyczące płatności.</string>
     <string name="available_addresses">Dostępne adresy</string>
     <string name="inactive_addresses">Nieaktywne adresy</string>
     <string name="not_set">Nie ustawiono</string>
@@ -654,9 +650,7 @@
     <string name="account_settings">Ustawienia konta</string>
     <!-- region Acc Settings -->
     <string name="account">Konto</string>
-    <string name="subscription">Subskrypcja</string>
-    <string name="plan_and_user">Plan</string>
-    <string name="payment_method">Metoda płatności</string>
+    <string name="drawer_subscription">Subskrypcja</string>
     <string name="password_manager">Zarządzaniem hasłem</string>
     <string name="password_changed">Hasło zostało zmienione.</string>
     <string name="recovery_email">Adres pomocniczy</string>
@@ -859,7 +853,6 @@
     <string name="inbox_could_not_retrieve_messages">Nie można pobrać wiadomości</string>
     <string name="inbox_pull_down_to_retry">Przeciągnij w dół, aby ponowić próbę</string>
     <string name="edit_draft">Edytuj szkic</string>
-    <string name="primary_user_error">Nie można ulepszyć. Coś poszło nie tak.</string>
     <string name="details_show_history">Pokaż historię</string>
     <string name="could_not_complete_action">Nie można zakończyć akcji</string>
     <string name="decryption_of_message_failed">Błąd odszyfrowywania: odszyfrowanie tej wiadomości nie powiodło się.</string>
