--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -359,10 +359,6 @@
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d встроенных изображений</string>
     <string name="warning">Предупреждение</string>
-    <string name="card_details_title">%1$s (*** %2$s)</string>
-    <string name="card_details_subtitle">Срок действия %s</string>
-    <string name="no_payment_methods">У вас нет сохранённых способов оплаты.</string>
-    <string name="edit_payment_methods">Пожалуйста, войдите через protonmail.com, чтобы изменить платёжную информацию.</string>
     <string name="available_addresses">Доступные адреса</string>
     <string name="inactive_addresses">Неактивные адреса</string>
     <string name="not_set">Не задано</string>
@@ -656,9 +652,7 @@
     <string name="account_settings">Настройки учётной записи</string>
     <!-- region Acc Settings -->
     <string name="account">Учётная запись</string>
-    <string name="subscription">Подписка</string>
-    <string name="plan_and_user">Тариф</string>
-    <string name="payment_method">Способ оплаты</string>
+    <string name="drawer_subscription">Подписка</string>
     <string name="password_manager">Управление паролями</string>
     <string name="password_changed">Пароль изменен.</string>
     <string name="recovery_email">Адрес резервной эл. почты</string>
@@ -861,7 +855,6 @@
     <string name="inbox_could_not_retrieve_messages">Не удалось получить ваши сообщения</string>
     <string name="inbox_pull_down_to_retry">Пожалуйста, потяните вниз, чтобы повторить</string>
     <string name="edit_draft">Редактировать черновик</string>
-    <string name="primary_user_error">Обновление не произошло, что-то пошло не так.</string>
     <string name="details_show_history">Показать историю</string>
     <string name="could_not_complete_action">Невозможно закончить действие</string>
     <string name="decryption_of_message_failed">Ошибка расшифровки: при расшифровке зашифрованного содержимого этого сообщения произошёл сбой.</string>
