--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -344,10 +344,6 @@
     <string name="inline_prefix">[Inline]</string>
     <string name="inline_header">%d 张嵌入图像</string>
     <string name="warning">警告</string>
-    <string name="card_details_title">%1$s (*** %2$s)</string>
-    <string name="card_details_subtitle">有效期至 %s</string>
-    <string name="no_payment_methods">您尚未添加支付方式。</string>
-    <string name="edit_payment_methods">请登录 protonmail.com 更改支付方式。</string>
     <string name="available_addresses">可用地址</string>
     <string name="inactive_addresses">闲置地址</string>
     <string name="not_set">未设置</string>
@@ -621,9 +617,7 @@
     <string name="account_settings">账户设置</string>
     <!-- region Acc Settings -->
     <string name="account">账户</string>
-    <string name="subscription">等级</string>
-    <string name="plan_and_user">等级</string>
-    <string name="payment_method">支付方式</string>
+    <string name="drawer_subscription">等级</string>
     <string name="password_manager">密码管理</string>
     <string name="password_changed">密码已更改。</string>
     <string name="recovery_email">密保邮箱</string>
@@ -813,7 +807,6 @@
     <string name="inbox_could_not_retrieve_messages">获取邮件失败</string>
     <string name="inbox_pull_down_to_retry">请下拉重试</string>
     <string name="edit_draft">编辑草稿</string>
-    <string name="primary_user_error">发生错误，升级失败。</string>
     <string name="details_show_history">显示历史记录</string>
     <string name="could_not_complete_action">操作无法完成</string>
     <string name="decryption_of_message_failed">解密失败：解密此邮件的内容时出错。</string>
